[tool.poetry]
name = "metadata-tutorial-container"
version = "0.1.0"
description = ""
authors = ["Mark <mark.hall@work.room3b.eu>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter-repo2docker = "^0.11.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
